<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <!-- Pantry -->
    <Button
        android:text="@string/home_pantry"
        android:onClick="showPantry"
        style="@style/HomeScreenButtonStyle.Pantry"/>

    <!-- Leftovers -->
    <Button
        android:text="@string/home_leftovers"
        android:onClick="showLeftovers"
        style="@style/HomeScreenButtonStyle.Leftovers"/>

    <!-- Shopping List-->
    <Button
        android:text="@string/home_shopping_list"
        android:onClick="showShoppingList"
        style="@style/HomeScreenButtonStyle.ShoppingList"/>

    <!-- Divider Line -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/home_divider_text"/>

    <!-- Barcode Scan Button -->
    <Button
        android:text="@string/home_scan_barcode"
        style="@style/HomeScreenButtonStyle.ScanItem"/>

</LinearLayout>
